--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,12 @@
 main:
   - title: "Quick-Start Guide"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+
+sidebar-category:
+  - title: "LANGUAGE"
+    children:
+      - title: "JavaScript"
+        url: "/javascript/"
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
